--- a/assets/style.css
+++ b/assets/style.css
@@ -123,5 +123,11 @@ header p {
     justify-content: center;
 }
 
+.carte_content .carte_clusters{
+    border: solid 1px black;
+    border-radius: 5px;
+}
+
+
 /* FINPAGE CARTE */
 /* ------------------------------------------------------ */
