--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,10 @@ nav .right_nav {
     margin-left: 70rem;
 }
 
+nav .right_nav .cta-btn {
+    margin: 0px 0px 17.8rem 0px;
+}
+
 nav .right_nav a{
     margin-right: 15px;
     text-decoration: none;
@@ -82,7 +86,6 @@ footer {
     cursor: pointer;
     border-radius: 5px;
     font-size: 1em;
-    margin: 0px 0px 17.8rem 0px;
 }
 
 /* ------------------------------------------------------ */
@@ -132,11 +135,10 @@ main .text_content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 500px 0px 0px 0px;
-    background-color: #838b80;
+    padding: 10rem 0px 10rem 0px;
+    background-color: #c0d6b8;
 }
 
 
-
-/* FIN CARTE */
+/* FIN PAGE CARTE */
 /* ------------------------------------------------------ */
