--- a/assets/style.css
+++ b/assets/style.css
@@ -130,9 +130,14 @@ main .carte_content {
     justify-content: center;
 }
 
+main .carte_content #map {
+    margin-right: 2rem;
+}
+
 main .carte_content .carte_clusters{
     border: solid 1px rgb(109, 109, 109);
     border-radius: 5px;
+    margin-left: 2rem;
 }
 
 main .text_content {
@@ -140,7 +145,7 @@ main .text_content {
     flex-direction: column;
     align-items: center;
     padding: 6rem 0px 6rem 0px;
-    background-color: rgba(78, 165, 78, 0.3); /* 1.0 - opaque */
+    background-color: #87bc26;
 }
 
 
