--- a/assets/style.css
+++ b/assets/style.css
@@ -145,7 +145,7 @@ main .text_content {
     flex-direction: column;
     align-items: center;
     padding: 6rem 0px 6rem 0px;
-    background-color: #87bc26;
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
 }
 
 
