--- a/assets/style.css
+++ b/assets/style.css
@@ -85,6 +85,11 @@ footer {
     cursor: pointer;
     border-radius: 5px;
     font-size: 1em;
+    transition: all 0.2s;
+}
+
+.cta-btn:hover {
+    background-color: #87bc26;
 }
 
 /* ------------------------------------------------------ */
@@ -152,7 +157,7 @@ main .carte_content .carte_clusters{
 
 main .carte_content .carte_clusters .cluster_card input {
     padding: 5px;
-    border: rgb(153, 0, 0);
+    border: 1px solid rgb(153, 0, 0);
     margin-right: 10px;
 }
 
