--- a/assets/style.css
+++ b/assets/style.css
@@ -149,16 +149,16 @@ main .carte_content #map {
 }
 
 main .carte_content .carte_clusters{
-    border: solid 1px rgb(109, 109, 109);
+    border: solid 1px #d7d7d7;
     border-radius: 5px;
     margin-left: 2rem;
     padding: 3rem 1rem 3rem 1rem;
 }
 
-main .carte_content .carte_clusters .cluster_card input {
-    padding: 5px;
-    border: 1px solid rgb(153, 0, 0);
-    margin-right: 10px;
+input {
+    border: solid 1px #d7d7d7;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 
