--- a/assets/style.css
+++ b/assets/style.css
@@ -149,6 +149,10 @@ main .carte_content #map {
 }
 
 main .carte_content .carte_clusters{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     border: solid 1px #d7d7d7;
     border-radius: 5px;
     margin-left: 2rem;
