--- a/assets/style.css
+++ b/assets/style.css
@@ -150,7 +150,7 @@ main .carte_content #map {
 
 main .carte_content .carte_clusters{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border: solid 1px #d7d7d7;
