--- a/assets/style.css
+++ b/assets/style.css
@@ -141,7 +141,7 @@ main .carte_content {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 2rem 0px 2rem 0px;
+    margin: 4rem 0px 4rem 0px;
 }
 
 main .carte_content #map {
@@ -157,6 +157,16 @@ main .carte_content .carte_clusters{
     border-radius: 5px;
     margin-left: 2rem;
     padding: 3rem 1rem 3rem 1rem;
+}
+
+main .carte_content .carte_clusters h2 {
+    padding: 0;
+    margin: 0;
+}
+
+main .carte_content .carte_clusters p {
+    padding: 0;
+    margin: 0;
 }
 
 input {
