--- a/assets/style.css
+++ b/assets/style.css
@@ -161,12 +161,13 @@ main .carte_content .carte_clusters{
 
 main .carte_content .carte_clusters h2 {
     padding: 0;
-    margin: 0;
+    margin-bottom: 8px;
 }
 
 main .carte_content .carte_clusters p {
     padding: 0;
-    margin: 0;
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
 
 input {
