--- a/assets/style.css
+++ b/assets/style.css
@@ -161,12 +161,16 @@ main .carte_content .carte_clusters{
 
 main .carte_content .carte_clusters h2 {
     padding: 0;
-    margin-bottom: 500px;
+    margin-bottom: 4rem;
 }
 
 main .carte_content .carte_clusters p {
     padding: 0;
     margin-top: 2px;
+}
+
+main .carte_content .carte_clusters cluster_card {
+    margin-top: 4rem;
 }
 
 input {
