--- a/assets/style.css
+++ b/assets/style.css
@@ -179,6 +179,9 @@ input {
     border-radius: 5px;
 }
 
+.tabArbre {
+    margin: 20px;
+}
 
 /* FIN PAGE CARTE */
 /* ------------------------------------------------------ */
