--- a/assets/style.css
+++ b/assets/style.css
@@ -180,8 +180,8 @@ input {
 }
 
 .tabArbre {
-    margin: 0rem 10rem 0rem 10rem;
-    padding: 0;
+    margin: 0rem 15rem 0rem 15rem;
+    padding: 0rem 0rem 2rem 0rem;
     border: solid black 2px;
 }
 
