--- a/assets/style.css
+++ b/assets/style.css
@@ -179,10 +179,12 @@ input {
     border-radius: 5px;
 }
 
+#arbres {
+    border: solid black 2px;
+}
 .tabArbre {
     margin: 0rem 20rem 0rem 20rem;
     padding: 0rem 0rem 2rem 0rem;
-    border: solid black 2px;
 }
 
 /* FIN PAGE CARTE */
