--- a/assets/style.css
+++ b/assets/style.css
@@ -179,9 +179,10 @@ input {
     border-radius: 5px;
 }
 
-#arbres {
+table {
     border: solid black 2px;
 }
+
 .tabArbre {
     margin: 0rem 20rem 0rem 20rem;
     padding: 0rem 0rem 2rem 0rem;
