--- a/assets/style.css
+++ b/assets/style.css
@@ -190,6 +190,7 @@ table {
 
 .pagination {
     align-items: center;
+    justify-content: center;
 }
 /* FIN PAGE CARTE */
 /* ------------------------------------------------------ */
