--- a/assets/style.css
+++ b/assets/style.css
@@ -202,11 +202,16 @@ table {
     border-radius: 5px;
     font-size: 1em;
     transition: all 0.2s;
-    margin: 10px;
+    margin: 5px;
 }
 
 .pagination button:hover {
     background-color: #87bc26;
+}
+
+.pagination span {
+    margin: 10px;
+    font-size: 20px;
 }
 
 /* FIN PAGE CARTE */
