--- a/assets/style.css
+++ b/assets/style.css
@@ -216,3 +216,10 @@ table {
 
 /* FIN PAGE CARTE */
 /* ------------------------------------------------------ */
+
+/* ------------------------------------------------------ */
+/* PAGE AJOUT */
+
+
+/* FIN PAGE AJOUT */
+/* ------------------------------------------------------ */
