--- a/assets/style.css
+++ b/assets/style.css
@@ -223,4 +223,10 @@ table {
         margin-left: 0rem;
     }
 }
+
+@media all and (max-width:1600px) {
+    nav .right_nav {
+        margin-left: 30rem;
+    }
+}
 /* FIN RESPONSIVE */
