--- a/assets/style.css
+++ b/assets/style.css
@@ -212,7 +212,15 @@ table {
 
 /* PAGE AJOUT */
 
-
+main #ajoutArbre {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    margin: 5rem 0rem 5rem 0rem;
+}
 
 /* FIN PAGE AJOUT */
 
