--- a/assets/style.css
+++ b/assets/style.css
@@ -214,6 +214,7 @@ table {
 
 main #ajoutArbre {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
