--- a/assets/style.css
+++ b/assets/style.css
@@ -228,6 +228,7 @@ main .form_ajout {
     display: flex;
     justify-content: center;
     background: url('img/fond_header.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 main #ajoutArbre .taille_form {
