--- a/assets/style.css
+++ b/assets/style.css
@@ -219,7 +219,7 @@ main #ajoutArbre {
     align-items: center;
     justify-content: center;
     margin: 5rem 0rem 5rem 0rem;
-    background-color: pink;
+    background-color: white;
     border-radius: 5px;
     width: 20rem;
 }
