--- a/assets/style.css
+++ b/assets/style.css
@@ -265,9 +265,11 @@ main #ajoutArbre .taille_form input {
     width: 70px;
 }
 
+.form_ajout #ajoutArbre select {
+    width: 50px;
+}
+
 /* FIN PAGE AJOUT */
-
-
 
 
 /* ------------------------------------------------------ */
