--- a/assets/style.css
+++ b/assets/style.css
@@ -266,9 +266,10 @@ main #ajoutArbre .taille_form input {
 }
 
 .form_ajout #ajoutArbre select {
+    margin-top: 5rem;
     width: 200px;
-    padding: 5;
-    border: solid 1px #a3a3a3;
+    padding: 10px;
+    border: solid 1px #d1d1d1;
 }
 
 /* FIN PAGE AJOUT */
