--- a/assets/style.css
+++ b/assets/style.css
@@ -287,18 +287,9 @@ main #ajoutArbre .taille_form input {
     background-color: #87bc26;
 }
 
-
-.form_ajout #ajoutArbre input[type="checkbox"] + label::before{
-    content:"";
-    display:inline-block;
-    width:12px;
-    height:12px;
-    background:#444;
-    border-radius:12px;
-}
-
-.form_ajout #ajoutArbre input[type="checkbox"]:checked + label::before{
-    background:limegreen;
+.form_ajout #ajoutArbre #remarquable {
+    padding: 500px;
+    color: #34671b;
 }
 
 /* FIN PAGE AJOUT */
