--- a/assets/style.css
+++ b/assets/style.css
@@ -218,7 +218,7 @@ main #ajoutArbre {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    margin: 5rem 0rem 5rem 0rem;
+    margin: 10rem 0rem 10rem 0rem;
     background-color: white;
     border-radius: 5px;
     width: 20rem;
@@ -254,6 +254,7 @@ main #ajoutArbre .taille_form input {
 .form_ajout #ajoutArbre .coord_form {
     display: flex;
     justify-content: center;
+    margin-top: 1rem;
 }
 
 .form_ajout #ajoutArbre .coord_form input {
