--- a/assets/style.css
+++ b/assets/style.css
@@ -289,6 +289,7 @@ main #ajoutArbre .taille_form input {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin: 1rem 0 1rem 0;
 }
 
 .form_ajout #ajoutArbre .remarquable_card label {
