--- a/assets/style.css
+++ b/assets/style.css
@@ -142,8 +142,9 @@ header .cta-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #87bc26;
+    background-color: #34671b;
     border-radius: 5px;
+    margin: 0 2rem 0 2rem;
 }
 
 /* FIN MAIN */
