--- a/assets/style.css
+++ b/assets/style.css
@@ -148,6 +148,12 @@ header .cta-btn {
     margin: 0 2rem 0 2rem;
     background-color: #34671b;
     border-radius: 5px;
+    color: white;
+    width: 100px;
+}
+
+.main_accueil .desc_project .part_card_project h3 {
+    border-bottom: solid 1px white;
 }
 
 /* FIN MAIN */
