--- a/assets/style.css
+++ b/assets/style.css
@@ -149,7 +149,8 @@ header .cta-btn {
     background-color: #34671b;
     border-radius: 5px;
     color: white;
-    width: 100px;
+    width: 250px;
+    height: 500px;
 }
 
 .main_accueil .desc_project .part_card_project h3 {
