--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,6 @@ header .cta-btn {
 
 .main_accueil h1 {
     margin-top: 2rem;
-
 }
 
 .main_accueil .image_card{
@@ -142,6 +141,7 @@ header .cta-btn {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
 .main_accueil .desc_project .part_card_project {
@@ -149,12 +149,18 @@ header .cta-btn {
     background-color: #34671b;
     border-radius: 5px;
     color: white;
-    max-width: 250px;
-    max-height: 400px;
+    max-width: 300px;
+    height: 350px;
 }
 
 .main_accueil .desc_project .part_card_project h3 {
     border-bottom: solid 1px white;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.main_accueil .desc_project .part_card_project p {
+    margin: 10px 15px 10px 15px;
 }
 
 /* FIN MAIN */
