--- a/assets/style.css
+++ b/assets/style.css
@@ -155,8 +155,9 @@ header .cta-btn {
 
 .main_accueil .desc_project .part_card_project h3 {
     border-bottom: solid 1px white;
-    justify-content: center;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .main_accueil .desc_project .part_card_project p {
