--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,11 @@ nav .login-btn {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+    transition: all 0.2s;
+}
+
+nav .login-btn:hover {
+    background-color: #87bc26;
 }
 
 /* FIN BARRE DE NAVIGATION */
