--- a/assets/style.css
+++ b/assets/style.css
@@ -366,9 +366,10 @@ main #ajoutArbre .taille_form input {
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
     text-align: center;
+    z-index: 1000;
 }
 
 .popup-content {
@@ -383,7 +384,7 @@ main #ajoutArbre .taille_form input {
     border-top: 8px solid #3498db;
     width: 60px;
     height: 60px;
-    animation: spin 2s linear infinite;
+    animation: spin 1s linear infinite;
     margin-bottom: 10px;
 }
 
