--- a/assets/style.css
+++ b/assets/style.css
@@ -378,14 +378,39 @@ main #ajoutArbre .taille_form input {
     align-items: center;
 }
 
-.spinner {
-    border: 8px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 8px solid #3498db;
-    width: 60px;
-    height: 60px;
-    animation: spin 1s linear infinite;
+.tree {
+    width: 0;
+    height: 0;
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    border-bottom: 60px solid green;
+    position: relative;
+    animation: spin 2s linear infinite;
     margin-bottom: 10px;
+}
+
+.tree::before {
+    content: '';
+    position: absolute;
+    left: -15px;
+    top: -45px;
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 40px solid green;
+}
+
+.tree::after {
+    content: '';
+    position: absolute;
+    left: -10px;
+    top: -80px;
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 30px solid green;
 }
 
 @keyframes spin {
