--- a/assets/style.css
+++ b/assets/style.css
@@ -399,6 +399,13 @@ main #ajoutArbre .taille_form input {
     display: flex;
 }
 
+.predict_main .prediction {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* FIN PAGE PREDICTION */
 
 /* ------------------------------------------------------ */
