--- a/assets/style.css
+++ b/assets/style.css
@@ -408,6 +408,7 @@ main #ajoutArbre .taille_form input {
 
 .predict_main .prediction .card {
     display: flex;
+    justify-content: center;
 }
 
 .predict_main .prediction .card h1{
