--- a/assets/style.css
+++ b/assets/style.css
@@ -239,6 +239,13 @@ table {
     padding: 0rem 0rem 2rem 0rem;
 }
 
+select {
+    margin-top: 1rem;
+    width: 280px;
+    padding: 10px;
+    border: solid 1px #d1d1d1;
+}
+
 .pagination {
     align-items: center;
     justify-content: center;
