--- a/assets/style.css
+++ b/assets/style.css
@@ -445,7 +445,6 @@ main #ajoutArbre .taille_form input {
 
 
 .page {
-    width: 100vh;
     height: 100vh;
     text-align: center;
     display: flex;
@@ -463,6 +462,8 @@ main #ajoutArbre .taille_form input {
 
 .form {
     background-color: white;
+    width: 500px;
+    margin-top: 10rem;
 }
 
 form .top_form {
