--- a/assets/style.css
+++ b/assets/style.css
@@ -445,9 +445,11 @@ main #ajoutArbre .taille_form input {
 
 
 .page {
+    display: flex;
     height: 100vh;
     text-align: center;
-    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     background: linear-gradient(to top, #87bc26, #34671b);
 }
@@ -460,10 +462,13 @@ main #ajoutArbre .taille_form input {
     opacity: 30%;
 }
 
+.page a {
+    color: white;
+}
+
 .form {
     background-color: white;
     width: 500px;
-    margin-top: 10rem;
 }
 
 form .top_form {
