--- a/assets/style.css
+++ b/assets/style.css
@@ -544,6 +544,14 @@ form input::placeholder {
 
 /* ------------------------------------------------------ */
 
+/* PAGE CREATE ACCOUNT */
+
+
+
+/* FIN PAGE CREATE ACCOUNT */
+
+/* ------------------------------------------------------ */
+
 /* RESPONSIVE */
 @media all and (max-width:1600px) {
     nav .right_nav {
