--- a/assets/style.css
+++ b/assets/style.css
@@ -170,6 +170,10 @@ header .cta-btn {
     margin: 10px 15px 10px 15px;
 }
 
+.content_text{
+    width: 90%;
+}
+
 /* FIN MAIN */
 
 /*  FIN PAGE D'ACCUEIL */
